# AdventOfCode

./: README.md  go.mod  go.sum  template.sh
01/: README.md
02/: main.go
03/: main.go
04/: main.go
05/: main.go
06/: main.go
07/: main.go
08/: main.go
09/: README.md  main.go
1/: main.go
10/: main.go
11/: README.md  main.go
12/: part1.go  part2.go
12/part2/: main.go
14/: README.md
16/: README.md  main.go
17/: README.md  main.go
18/: main.go
2/: README.md
2020/: template.sh
2020/01/: main.go
2020/04/: main.go
2020/05/: main.go
2020/12/: README.md
2020/12/part1/: main.go
2020/13/: README.md  main.go
2020/14/: main.go
2020/15/: README.md  main.go
2020/16/: nearby_tickets
2020/17/: README.md  main.go
2020/18/: README.md
2020/concurrencyPractice/: mandelbrot.go  spinner.go
2020/util/: math.go
2021/: Cargo.toml  template.sh
2021/template/: main.rs
2022/: readme.md
2022/days/: Cargo.toml
2022/days/template/: main.rs  template.sh
2022/util/: Cargo.toml
2022/util/src/: input.rs  parsing.rs
2023/days/: Cargo.toml
2023/days/template/: main.rs
2024/: Cargo.toml
3/: README.md  main.go
4/: README.md  main.go
5/: README.md  main.go
6/: README.md  main.go
7/: README.md
concurrencyPractice/: README.md  channels.go  pipeline1.go  pipeline2.go
concurrencyPractice/sudokusolver/: sudokusolver.go
template/: main.go
util/: files.go
util/vector/: vector.go
