[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2018"
authors= ["Emiel Van Severen <emiel@vanseveren.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "0.3.1"
lazy_static = "1.4.0"
regex="1.5.4"
anyhow="1.0.51"
itertools = "0.10.3"

[dev-dependencies]
criterion = "0.3.1"
